--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <!-- Emotions -->
+    <color name="emotion_anger">#E82828</color>
+    <color name="emotion_confusion">#DC326C</color>
+    <color name="emotion_disgust">#5C904E</color>
+    <color name="emotion_fear">#A147D9</color>
+    <color name="emotion_happiness">#F2E46D</color>
+    <color name="emotion_sadness">#3C66A2</color>
+    <color name="emotion_shame">#4C4C4C</color>
+    <color name="emotion_surprise">#7C0909</color>
+    <color name="emotion_laughter">#F28E3D</color>
+
 </resources>
