--- a/MyApplication2/app/src/main/res/layout/spinner_item.xml
+++ b/MyApplication2/app/src/main/res/layout/spinner_item.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/spinner_item_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="#000000"
-        android:padding="8dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text1"
+    android:layout_width="70dp"
+    android:layout_height="wrap_content"
+    android:textSize="30sp"
+    android:maxLines="1"
+    style="@android:style/Widget.TextView.SpinnerItem"/>
