--- a/MyApplication2/app/src/main/res/layout/spinner_item.xml
+++ b/MyApplication2/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/text1"
-    android:layout_width="70dp"
-    android:layout_height="wrap_content"
-    android:textSize="30sp"
+    android:id="@android:id/text1"
+    android:layout_width="96dp"
+    android:layout_height="96dp"
+    android:textSize="80sp"
+    android:gravity="center"
+    android:padding="8dp"
     android:maxLines="1"
+    android:ellipsize="none"
+    android:textColor="@color/white"
     style="@android:style/Widget.TextView.SpinnerItem"/>
