--- a/MyApplication2/app/src/main/res/layout/spinner_item.xml
+++ b/MyApplication2/app/src/main/res/layout/spinner_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:layout_width="96dp"
-    android:layout_height="96dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:textSize="80sp"
     android:gravity="center"
-    android:padding="8dp"
+    android:padding="10dp"
     android:maxLines="1"
     android:ellipsize="none"
     android:textColor="@color/white"
