--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,14 @@
     <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_margin="16dp"
+        android:layout_marginTop="60dp"
         android:scaleType="fitCenter"
         android:contentDescription="@string/back"
         android:src="@drawable/back_button"
+        app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,15 +75,19 @@
 
     <!-- Image Insert and Location Sharing -->
     <ImageButton
-        android:id="@+id/btnInsertImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/insert_image"
-        android:src="@android:drawable/ic_menu_camera"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
+    android:id="@+id/btnInsertImage"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_marginTop="32dp"
+    android:contentDescription="@string/insert_image"
+    android:src="@android:drawable/ic_menu_gallery"
+    android:scaleType="centerCrop"
+    android:adjustViewBounds="true"
+    android:background="@android:color/transparent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
+
 
     <CheckBox
         android:id="@+id/checkboxShareLocation"
