added return to login screen from signup

--- a/code/app/src/main/res/layout/signup_screen.xml
+++ b/code/app/src/main/res/layout/signup_screen.xml
@@ -76,6 +76,16 @@
         android:textColor="#000000"
         tools:ignore="VisualLintButtonSize" />
 
+    <Button
+        android:id="@+id/back_to_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/return_to_login"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#000000"
+        android:textColorHint="#FFFFFF"
+        tools:ignore="VisualLintButtonSize" />
+
 
 
 
