--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:textSize="80sp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:maxLines="1"
+        android:ellipsize="none"
+        android:textColor="@color/white"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/etReason"/>
+
 
     <!-- Text Input Fields -->
     <EditText
