One line changed commit, I noticed during the signup, my username was taken as a password input

--- a/code/app/src/main/res/layout/signup_screen.xml
+++ b/code/app/src/main/res/layout/signup_screen.xml
@@ -47,7 +47,7 @@
         android:layout_marginTop="10dp"
         android:autofillHints=""
         android:hint="@string/username"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:minHeight="48dp"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
