--- a/code/app/src/main/res/layout/login_screen.xml
+++ b/code/app/src/main/res/layout/login_screen.xml
@@ -17,11 +17,11 @@
         android:padding="20dp"/>
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints=""
-        android:hint="@string/email"
+        android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         android:textColorHint="#FFFFFF"
