I added a few things to the signup activity and kinda split it up between front end and back end I also added a confirm password field for signing up. TODO: need to query existing usernames such that a user name can be unique

--- a/code/app/src/main/res/layout/signup_screen.xml
+++ b/code/app/src/main/res/layout/signup_screen.xml
@@ -17,6 +17,32 @@
         android:padding="20dp"/>
 
     <EditText
+        android:id="@+id/username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:autofillHints=""
+        android:hint="@string/username"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColorHint="#FFFFFF"
+        android:textColor="#FFFFFF"
+        tools:ignore="VisualLintTextFieldSize" />
+
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:autofillHints=""
+        android:hint="@string/name"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColorHint="#FFFFFF"
+        android:textColor="#FFFFFF"
+        tools:ignore="VisualLintTextFieldSize" />
+
+    <EditText
         android:id="@+id/email"
         android:textColor="#FFFFFF"
         android:layout_width="match_parent"
@@ -40,18 +66,6 @@
         android:textColor="#FFFFFF"
         tools:ignore="VisualLintTextFieldSize" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:autofillHints=""
-        android:hint="@string/username"
-        android:inputType="text"
-        android:minHeight="48dp"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
-        tools:ignore="VisualLintTextFieldSize" />
 
     <EditText
         android:id="@+id/password"
@@ -66,6 +80,18 @@
         android:textColor="#FFFFFF"
         tools:ignore="VisualLintTextFieldSize" />
 
+    <EditText
+        android:id="@+id/confirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:autofillHints=""
+        android:hint="@string/confrim_password"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColorHint="#FFFFFF"
+        android:textColor="#FFFFFF"
+        tools:ignore="VisualLintTextFieldSize" />
     <Button
         android:id="@+id/create_account"
         android:layout_width="match_parent"
