Hook up controller to mood list view. changed main activity to be en entry point, which checks if the user is logged in

--- a/code/app/src/main/res/layout/following_mood_event_list_view.xml
+++ b/code/app/src/main/res/layout/following_mood_event_list_view.xml
@@ -8,5 +8,10 @@
     <include
         layout="@layout/header" />
 
+    <ListView
+        android:id="@+id/listviewMoodEvents"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
