Added a profile page - work in progress

--- a/code/app/src/main/res/layout/home.xml
+++ b/code/app/src/main/res/layout/home.xml
@@ -6,7 +6,9 @@
     android:padding="16dp">
 
     <include
-        layout="@layout/header" />
+        layout="@layout/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
