--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:scaleType="fitCenter"
         android:contentDescription="@string/back"
         android:src="@drawable/back_button"
+        android:background="@null"
         app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
