Work in progress... I will be afk for most of the night most likely... will pickup tomorrow hopefully

--- a/code/app/src/main/res/layout/activity_profile.xml
+++ b/code/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
     tools:context=".views.ProfileActivity">
 
     <include
-        layout="@layout/profile_page_header"
+        layout="@layout/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
