--- a/code/app/src/main/res/layout/addmoodform.xml
+++ b/code/app/src/main/res/layout/addmoodform.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MoodAddView">
+    tools:context=".views.MoodAddView">
 
     <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
