--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -15,7 +15,9 @@
     <color name="white">#FFFFFF</color>
 
 
-
+    <!-- Mood list item -->
+    <color name="follow">#DC826B</color>
+    <color name="following">#B9B9B9</color>
 
 
 
