--- a/code/app/src/main/res/layout/mood_listview.xml
+++ b/code/app/src/main/res/layout/mood_listview.xml
@@ -15,11 +15,11 @@
 
         <Button
             android:id="@+id/btnFollowFromMood"
-            android:backgroundTint="@color/follow"
+            android:backgroundTint="@color/following"
             android:textColor="@color/white"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/follow" />
+            android:text="@string/following" />
 
 
         <TextView
