--- a/code/app/src/main/res/layout/activity_profile.xml
+++ b/code/app/src/main/res/layout/activity_profile.xml
@@ -22,6 +22,7 @@
         android:layout_weight="1"/>
 
     <Button
+        android:id="@+id/FollowRequests"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/follow_requests"
