--- a/code/app/src/main/res/layout/addmoodform.xml
+++ b/code/app/src/main/res/layout/addmoodform.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.MoodAddView">
+    tools:context=".views.MoodAddActivity">
 
     <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
@@ -15,34 +15,36 @@
         android:layout_height="70dp"
         android:layout_margin="16dp"
         android:layout_marginTop="60dp"
-        android:scaleType="fitCenter"
         android:contentDescription="@string/back"
+        android:scaleType="fitCenter"
         android:src="@drawable/back_button"
         app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Text Input Fields -->
     <Spinner
         android:id="@+id/spinnerMood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
 
+        app:layout_constraintBottom_toTopOf="@id/etReason"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/etReason"/>
+        app:layout_constraintVertical_bias="0.389" />
 
-    <!-- Text Input Fields -->
     <EditText
         android:id="@+id/etReason"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="108dp"
         android:hint="@string/hint_reason"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
@@ -73,33 +75,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etExplanation" />
 
+
     <!-- Image Insert and Location Sharing -->
+
+
+    <!-- Submit Button -->
+
     <ImageButton
         android:id="@+id/btnInsertImage"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/insert_image"
-        android:src="@android:drawable/ic_menu_gallery"
-        android:scaleType="centerCrop"
+        android:layout_marginTop="28dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/insert_image"
+        android:scaleType="centerCrop"
+        android:src="@android:drawable/ic_menu_gallery"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
-
 
     <CheckBox
         android:id="@+id/checkboxShareLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/share_location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnInsertImage" />
 
-    <!-- Submit Button -->
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="0dp"
@@ -113,5 +119,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/datePickerAddMood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="Date"
+        android:ems="10"
+        android:hint="@string/date_for_mood_event"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/checkboxShareLocation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnInsertImage"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSocialSituation"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
