Fix button style logic. Refactor mood list controller to listen for follows and follow requests. add follow requests and follow requests repo

--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <!-- Mood list item -->
     <color name="follow">#DC826B</color>
     <color name="following">#B9B9B9</color>
+    <color name="requested">#B9B9B9</color>
 
 
 
