--- a/code/app/src/main/res/layout/addmoodform.xml
+++ b/code/app/src/main/res/layout/addmoodform.xml
@@ -96,6 +96,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
 
+    <ImageView
+        android:id="@+id/IVPreviewImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="4dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btnInsertImage" />
+
     <CheckBox
         android:id="@+id/checkboxShareLocation"
         android:layout_width="wrap_content"
