--- a/code/app/src/main/res/layout/mood_listview.xml
+++ b/code/app/src/main/res/layout/mood_listview.xml
@@ -7,6 +7,12 @@
     android:background="#000000"
     android:layout_marginBottom="8dp">
 
+    <View
+        android:id="@+id/emotionColor"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/emotion_sadness" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
