--- a/code/app/src/main/res/layout/activity_discover.xml
+++ b/code/app/src/main/res/layout/activity_discover.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="0dp">
 
     <ListView
         android:id="@+id/listviewMoodEvents"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
