Saving changes before switching to dev

--- a/code/app/src/main/res/layout/update_or_delete.xml
+++ b/code/app/src/main/res/layout/update_or_delete.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".views.MoodAddActivity">
+    tools:context=".views.UpdateOrDeleteMoodEventActivity">
 
     <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
