--- a/code/app/src/main/res/layout/mood_event_content_without_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_content_without_photo.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="@color/emotion_sadness">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +59,6 @@
                 android:id="@+id/emoticon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/emotion_happiness"
                 android:textSize="24sp"
                 android:textColor="#FFFFFF"
                 android:contentDescription="@string/emoticon"
