--- a/code/app/src/main/res/layout/activity_follow_requests.xml
+++ b/code/app/src/main/res/layout/activity_follow_requests.xml
@@ -11,4 +11,11 @@
         android:layout_height="wrap_content"
         />
 
+        <TextView
+            android:id="@+id/EmptyFollowRequests"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="36dp"
+            android:text="No Follow Requests"/>
+
 </LinearLayout>
