--- a/code/app/src/main/res/layout/addmoodform.xml
+++ b/code/app/src/main/res/layout/addmoodform.xml
@@ -119,7 +119,7 @@
         app:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/datePickerAddMood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
