--- a/code/app/src/main/res/layout/mood_event_context_with_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_context_with_photo.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
+    android:descendantFocusability="blocksDescendants"
     android:background="@color/emotion_sadness">
 
     <LinearLayout
@@ -41,7 +42,9 @@
                 android:minHeight="0dp"
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="14dp"
-
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:clickable="false"
                 android:text="@string/follow"
                 android:layout_gravity="end"
                 android:textColor="@color/white"
@@ -74,7 +77,6 @@
                     android:id="@+id/emoticon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/emotion_happiness"
                     android:textSize="24sp"
                     android:textColor="#FFFFFF"
                     android:contentDescription="@string/emoticon"
