--- a/code/app/src/main/res/layout/update_or_delete.xml
+++ b/code/app/src/main/res/layout/update_or_delete.xml
@@ -5,137 +5,83 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:padding="16dp"
     tools:context=".views.UpdateOrDeleteMoodEventActivity">
 
-    <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/back"
         android:scaleType="fitCenter"
-        android:src="@drawable/back_button"
-        app:backgroundTint="@color/black"
+        android:src="@drawable/left_arrow"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
 
-    <!-- Text Input Fields -->
+
     <Spinner
         android:id="@+id/spinnerMood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-
-        app:layout_constraintBottom_toTopOf="@id/etReason"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.389" />
-
-    <EditText
-        android:id="@+id/etReason"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:hint="@string/hint_reason"
-        android:maxLength="20"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
+
     <EditText
-        android:id="@+id/etExplanation"
+        android:id="@+id/EditTextUpdateTextExplanation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="top"
-        android:hint="@string/hint_explanation"
+        android:hint="@string/hint_reason"
+        android:maxLength="200"
+        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etReason" />
+        app:layout_constraintTop_toBottomOf="@id/spinnerMood" />
 
-    <!-- Social Situation Section -->
+
     <Spinner
         android:id="@+id/spinnerSocialSituation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:entries="@array/social_situation_array"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etExplanation" />
+        app:layout_constraintTop_toBottomOf="@id/EditTextUpdateTextExplanation" />
 
-
-    <!-- Image Insert and Location Sharing -->
-
-
-    <!-- Submit Button -->
-
-    <ImageButton
-        android:id="@+id/btnInsertImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="28dp"
-        android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/insert_image"
-        android:scaleType="centerCrop"
-        android:src="@android:drawable/ic_menu_gallery"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
-
-    <ImageView
-        android:id="@+id/IVPreviewImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="4dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btnInsertImage" />
 
     <CheckBox
         android:id="@+id/checkboxShareLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/share_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnInsertImage" />
-    <EditText
+        app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
+
+    <TextView
         android:id="@+id/datePickerAddMood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="Date"
-        android:ems="10"
-        android:hint="@string/date_for_mood_event"
-        android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/checkboxShareLocation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnInsertImage"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSocialSituation" />
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="@string/date_for_mood_event"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/checkboxShareLocation" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="@color/black"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -144,9 +90,8 @@
             android:id="@+id/deleteMoodButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/red"
             android:padding="12dp"
             android:text="@string/delete_this_mood"
             android:textColor="@color/white"
@@ -155,17 +100,13 @@
         <Button
             android:id="@+id/UpdateMoodButton"
             android:layout_width="0dp"
-            android:textSize="16sp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/green"
             android:padding="12dp"
+            android:text="@string/update_this_mood"
             android:textColor="@color/white"
-            android:backgroundTint="@color/black"
-            android:layout_gravity="center"
-            android:text="@string/edit_this_mood"
-            android:layout_weight="1"/>
-
-
+            android:textSize="16sp" />
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
