--- a/code/app/src/main/res/layout/add_mood.xml
+++ b/code/app/src/main/res/layout/add_mood.xml
@@ -8,21 +8,20 @@
     android:layout_height="match_parent"
     tools:context=".views.MoodAddActivity">
 
-    <!-- Back Button and Emoji Spinner Row -->
     <ImageButton
         android:id="@+id/btnBack"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/back"
         android:scaleType="fitCenter"
-        android:src="@drawable/back_button"
-        app:backgroundTint="@color/black"
+        android:src="@drawable/left_arrow"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
 
-    <!-- Text Input Fields -->
+
     <Spinner
         android:id="@+id/spinnerMood"
         android:layout_width="wrap_content"
