--- a/code/app/src/main/res/layout/activity_base.xml
+++ b/code/app/src/main/res/layout/activity_base.xml
@@ -8,13 +8,14 @@
         android:id="@+id/header"
         layout="@layout/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 
     <!-- Content below the header -->
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header" />
+        android:layout_above="@id/header" />
 
 </RelativeLayout>
