--- a/code/app/src/main/res/layout/mood_list_view.xml
+++ b/code/app/src/main/res/layout/mood_list_view.xml
@@ -7,6 +7,8 @@
     android:padding="0dp">
 
     <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="2dp"
