--- a/code/app/src/main/res/layout/add_mood.xml
+++ b/code/app/src/main/res/layout/add_mood.xml
@@ -42,11 +42,25 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:maxLength="20"
-        android:hint="@string/hint_reason"
+        android:hint="@string/hint_reason_why_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
+
+    <EditText
+        android:id="@+id/etTrigger"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
+        android:maxLength="20"
+        android:hint="@string/hint_trigger"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etReasonWhyText" />
 
     <!-- Social Situation Section -->
     <Spinner
@@ -59,7 +73,7 @@
         android:entries="@array/social_situation_array"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etReasonWhyText" />
+        app:layout_constraintTop_toBottomOf="@id/etTrigger" />
 
 
     <!-- Image Insert and Location Sharing -->
