--- a/code/app/src/main/res/layout/mood_event_context_with_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_context_with_photo.xml
@@ -136,7 +136,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/reasonWhyText"
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
