--- a/code/app/src/main/res/layout/mood_event_context_with_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_context_with_photo.xml
@@ -34,7 +34,7 @@
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp" />
 
-            <Button
+            <com.example.y.utils.FollowButton
                 android:id="@+id/btnFollowFromMood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
